update shoppingCart, orderDone

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
     <title>Hello, world!</title>
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/cssfooter.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 </head>
 <body>
 <section class="bg-danger">
@@ -20,7 +21,7 @@
             </div>
             <div class="col-8">
                 <div class="float-right">
-                    <a class="text-white" href="#">Order Status</a>
+                    <a class="text-white" href="#orderStatus">Order Status</a>
                     |
                     <a href="#login-modal" class="text-white" data-toggle="modal">Login</a>
                     /
