--- a/pages/products.html
+++ b/pages/products.html
@@ -16,7 +16,7 @@
                         <div class="card">
                             <!--<div class="card-body">-->
                             <a href="#">
-                                <img src="img/Husbands_Birthday_Greeting__Card_89070890010139_1_ed4ce5ec.jpg" alt="merychrismas" class="w-100">
+                                <img src="img/retirement1.jpg" alt="merychrismas" class="w-100">
                             </a>
                             <!--</div>-->
                         </div>
@@ -55,11 +55,7 @@
                             <i class="fa fa-cart-plus"></i>
                             Add to Cart
                         </button>
-<<<<<<< HEAD
-                        <a href="#productDetail" class="btn btn-outline-success">
-=======
                         <a href="#productDetail/" class="btn btn-outline-success">
->>>>>>> 2103496e9a9f19c6de6427c7a4ad1124fe2e3f94
                             <i class="fa fa-info"></i>
                             Full Detail
                         </a>
@@ -120,7 +116,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/retirement1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -134,7 +130,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/retirement1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -148,7 +144,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/retirement1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -162,7 +158,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/retirement1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -176,7 +172,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/engagel1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -190,7 +186,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/engagel1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -204,7 +200,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/engagel1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -218,7 +214,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/engagel1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
