--- a/pages/home.html
+++ b/pages/home.html
@@ -40,7 +40,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a href="#productDetail/">
-                    <img class="card-img-top" src="https://www.archiesonline.com/uploads/product_image/MXM00008_1-400_400.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/love1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -54,7 +54,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a href="#productDetail/">
-                    <img class="card-img-top" src="https://www.archiesonline.com/uploads/product_image/MXM00008_1-400_400.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/love1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -68,7 +68,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a href="#productDetail/">
-                    <img class="card-img-top" src="https://www.archiesonline.com/uploads/product_image/MXM00008_1-400_400.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/love1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -82,7 +82,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a href="#productDetail/">
-                    <img class="card-img-top" src="https://www.archiesonline.com/uploads/product_image/MXM00008_1-400_400.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/love1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -103,7 +103,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a href="#productDetail/">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/birthday1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -117,7 +117,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a href="#productDetail/">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/birthday1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -131,7 +131,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a href="#productDetail/">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/birthday1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
@@ -145,7 +145,7 @@
         <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a href="#productDetail/">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/birthday1.jpg" alt="Card image cap">
                 </a>
                 <div class="card-body text-center">
                     <h5 class="card-title">Trust dream card</h5>
