--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/cssfooter.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="css/toastr.min.css">
 </head>
 <body>
 <section class="bg-danger">
     <div class="container">
         <div class="row">
             <div class="col-4">
-                <img src="img/redCardsLimitedLogo.png" alt="RCL Logo" class="img-fluid">
+                <a href="#"><img src="img/redCardsLimitedLogo.png" alt="RCL Logo" class="img-fluid"></a>              
             </div>
             <div class="col-8">
                 <div class="float-right">
@@ -128,7 +129,6 @@
 </section>
 
 <div id="red-cards-view">
-
 </div>
 
 <footer style="margin-top: 30px">
@@ -199,6 +199,7 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/toastr.min.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
