--- a/pages/register.html
+++ b/pages/register.html
@@ -6,14 +6,14 @@
             <div class="form-group row">
                 <label class="col-1 col-form-label"><i class="fa fa-user"></i></label>
                 <div class="col-11">
-                    <input type="text" class="form-control" placeholder="Username" name="username" onkeyup="warningUsername()">
+                    <input type="text" class="form-control" placeholder="Username" name="username" onkeyup="validateUsername()">
                     <span id="usernameMessage"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-1 col-form-label"><i class="fa fa-lock"></i></label>
                 <div class="col-11">
-                    <input type="password" class="form-control" placeholder="Passwords" name="password" onkeyup="warningPassword()">
+                    <input type="password" class="form-control" placeholder="Passwords" name="password" onkeyup="validatePassword()">
                     <span id="passwordMessage"></span>
                 </div>
             </div>
