--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <img src="img/redCardsLimitedLogo.png" alt="RCL Logo" class="img-fluid">
             </div>
             <div class="col-8">
-                <div class="float-right">
-                    <a class="text-white" href="#orderStatus">Order Status</a>
+                <div class="float-right" id="login-logout"> <!-- Khối chức năng, bên phải header -->
+                    <a class="text-white hover-pointer" href="#orderStatus">Order Status</a> <!-- 0 -->
                     |
-                    <a href="#login-modal" class="text-white" data-toggle="modal">Login</a>
+                    <a class="text-white hover-pointer hover-underline">Login</a> <!-- 1 -->
                     /
-                    <a href="#register/" class="text-white">Register</a>
+                    <a href="#register/" class="text-white hover-pointer hover-underline">Register</a> <!-- 2 -->
                 </div>
             </div>
         </div>
@@ -114,10 +114,15 @@
                             <input type="password" class="form-control" id="login-pasword" placeholder="Password">
                         </div>
                     </div>
+                    <div class="form-group">
+                        <div class="alert alert-danger text-center" role="alert" id="loginError">
+                           <!--  Account information or password is incorrect. -->
+                        </div>
+                    </div>
                     <div class="form-group row">
                         <label class="col-sm-2 col-form-label text-right">&nbsp;</label>
                         <div class="col-sm-10">
-                            <button type="button" class="btn btn-outline-primary">Login <i class="fa fa-sign-in"></i></button>
+                            <button type="button" class="btn btn-outline-primary" onclick="login()">Login <i class="fa fa-sign-in"></i></button>
                             <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
                         </div>
                     </div>
@@ -200,5 +205,6 @@
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/index.js"></script>
+<script type="text/javascript" src="js/login.js"></script>
 </body>
 </html>
