--- a/pages/home.html
+++ b/pages/home.html
@@ -8,13 +8,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="https://www.archiesonline.com/uploads/banner_image/7dab82474f4bab410854211dd5419ea9.jpg" alt="First slide">
+                <img class="d-block w-100" src="img/show1.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://www.archiesonline.com/uploads/banner_image/7dab82474f4bab410854211dd5419ea9.jpg" alt="Second slide">
+                <img class="d-block w-100" src="img/show1.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://www.archiesonline.com/uploads/banner_image/7dab82474f4bab410854211dd5419ea9.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/show1.jpg" alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
