--- a/pages/products.html
+++ b/pages/products.html
@@ -112,8 +112,8 @@
             </div>
         </form>
     </div>
-    <div class="row">
-        <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
+    <div class="row" id="products-view">
+        <!-- <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
             <div class="card border-0 w-100">
                 <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
                     <img class="card-img-top" src="img/retirement1.jpg" alt="Card image cap">
@@ -223,8 +223,10 @@
             </div>
             <div class="text-white text-center add-cart-tag">
                 <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart
-            </div>
-            <nav aria-label="..." style="padding-top: 30px;">
+            </div> -->
+            
+        </div>
+        <nav aria-label="..." style="padding-top: 30px;">
                 <ul class="pagination justify-content-end">
                     <li class="page-item disabled">
                         <a class="page-link" href="">Previous</a>
@@ -246,6 +248,5 @@
                     </li>
                 </ul>
             </nav>
-        </div>
     </div>
 </main>
