update pagination and products

--- a/index.html
+++ b/index.html
@@ -52,27 +52,32 @@
                             <i class="fa fa-leaf"></i> Brands
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#products/">Archies</a>
-                            <a class="dropdown-item" href="#products/">Hallmark</a>
-                            <a class="dropdown-item" href="#products/">Blue Mountain</a>
-                            <a class="dropdown-item" href="#products/">American Greetings</a>
-                            <a class="dropdown-item" href="#products/">Galison</a>
-                            <a class="dropdown-item" href="#products/">Moo</a>
-                            <a class="dropdown-item" href="#products/">Cardstore</a>
+                            <a class="dropdown-item" href="#products/?brandId=5a3a282cd7ea3a2046d2683c">Archies</a>
+                            <a class="dropdown-item" href="#products/?brandId=5a3b717a286d242000b05096">Hallmark</a>
+                            <a class="dropdown-item" href="#products/?brandId=5a3b728c286d242000b05097">Blue Mountain</a>
+                            <a class="dropdown-item" href="#products/?brandId=5a3b730e286d242000b05098">American Greetings</a>
+                            <a class="dropdown-item" href="#products/?brandId=5a3b7365286d242000b05099">Galison</a>
+                            <a class="dropdown-item" href="#products/?brandId=5a3b73c8286d242000b0509a">Moo</a>
+                            <a class="dropdown-item" href="#products/?brandId=5a3b7474286d242000b0509b">Cardstore</a>
+                            <a class="dropdown-item" href="#products/?brandId=5a3bac5c45982320000f99f6">Garlanna</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#products/">View All</a>
                         </div>
+
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fa fa-birthday-cake"></i> Occations
+                            <i class="fa fa-birthday-cake"></i> Categories
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#products/">Birthday</a>
-                            <a class="dropdown-item" href="#products/">Seasonal</a>
-                            <a class="dropdown-item" href="#products/">Graduation</a>
-                            <a class="dropdown-item" href="#products/">Wedding</a>
-                            <a class="dropdown-item" href="#products/">Party</a>
+                            <a class="dropdown-item" href="#products/?categoryId=5a3bc84c60738a2000ebca1d">Birthday</a>
+                            <a class="dropdown-item" href="#products/?categoryId=5a3bc8a260738a2000ebca1e">Thank You Cards</a>
+                            <a class="dropdown-item" href="#products/?categoryId=5a3bc8e060738a2000ebca1f">Baby Cards</a>
+                            <a class="dropdown-item" href="#products/?categoryId=5a3bc90760738a2000ebca20">Engagement Cards</a>
+                            <a class="dropdown-item" href="#products/?categoryId=5a3bc92d60738a2000ebca21">Wedding Cards</a>
+                            <a class="dropdown-item" href="#products/?categoryId=5a3bc94f60738a2000ebca22">Anniversary Cards</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#products/">Any time</a>
+                            <a class="dropdown-item" href="#products/">View All</a>
                         </div>
                     </li>
                     <li class="nav-item">
