--- a/pages/products.html
+++ b/pages/products.html
@@ -81,6 +81,8 @@
                         <option value="5a3b7365286d242000b05099">Galison</option>
                         <option value="5a3b73c8286d242000b0509a">Moo</option>
                         <option value="5a3b7474286d242000b0509b">Cardstore</option>
+                        <option value="5a3bac5c45982320000f99f6">Garlanna</option>
+                        <option value="Brands">View All</option>
                     </select>
                 </div>
                 <div class="form-group ml-2">
@@ -92,6 +94,7 @@
                         <option value="5a3bc90760738a2000ebca20">Engagement Cards</option>
                         <option value="5a3bc92d60738a2000ebca21">Wedding Cards</option>
                         <option value="5a3bc94f60738a2000ebca22">Anniversary Cards</option>
+                        <option value="Categories">View All</option>
                     </select>
                 </div>
                 <div class="form-group ml-2">
