--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -7,39 +7,38 @@
             <li class="breadcrumb-item active" aria-current="page">Birthdayd61</li>
         </ol>
     </nav>
-    <div class="row">
+    <div class="row" id="product-detail">
         <div class="col-xs-12 col-md-5">
             <div class="card">
                 <div class="tab-content" id="pills-tabContent">
                     <div class="tab-pane fade show active" id="mini-img-1" role="tabpanel">
-                        <img id="zoom_01" src="img/retirement1.jpg" alt="" class="w-100" data-zoom-image="img/retirement1.jpg">
+                        <img id="zoom_01" alt="" class="w-100">
                     </div>
                     <div class="tab-pane fade" id="mini-img-2" role="tabpanel">
-                        <img id="zoom_02" src="img/retirement2.jpg" alt="" class="w-100" data-zoom-image="img/retirement2.jpg">
+                        <img id="zoom_02" alt="" class="w-100">
                     </div>
                 </div>
-
             </div>
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist" style="margin-top: 10px;">
                 <li class="nav-item">
                     <a class="nav-link active mini-img" data-toggle="pill" href="#mini-img-1" role="tab" aria-controls="pills-home" aria-selected="true">
-                        <img src="img/retirement1.jpg" width="60" height="60" alt="">
+                        <img id="mini_01" width="60" height="60" alt="">
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link mini-img" id="pills-profile-tab" data-toggle="pill" href="#mini-img-2" role="tab" aria-controls="pills-profile" aria-selected="false">
-                        <img src="img/mini2.jpg" width="60" height="60" alt="">
+                        <img id="mini_02" width="60" height="60" alt="">
                     </a>
                 </li>
             </ul>
         </div>
         <div class="col-xs-12 col-md-7">
             <div class="text-center margin-block-5" style="border-bottom: 1px solid #c7c7c7">
-                <h4><strong>HUSBAND`S BIRTHDAY GREETING CARD</strong></h4>
-                <span id="brand">Brand:<a href="#"> imFRIDAY</a></span>
-                <span class="ml-5">CODE: C1707G</span>
+                <h4><strong></strong></h4>
+                <span id="brand">Brand:<a href="#"></a></span>
+                <span class="ml-5"></span>
                 <br><br>
-                <p><strong class="text-danger"><i class="fa fa-usd"></i> 1(SAVE 10%)</strong></p>
+                <p><strong class="text-danger"><i class="fa fa-usd"></i></strong></p>
             </div>
             <div style="border-bottom: 1px solid #c7c7c7">
                 <div class="text-danger margin-block-5">
@@ -52,8 +51,8 @@
                 <div class="text-danger margin-block-5">
                     DESCRIPTION
                 </div>
-                <div style="padding-bottom: 10px;">
-                    Make your wonderful husband feel extra special on his birthday with this lovely greeting card. This card with a beautiful birthday message is sure to make the day a memorable one for him.
+                <div target="#" style="padding-bottom: 10px;">
+                   
                 </div>
             </div>
 
@@ -73,11 +72,12 @@
             </button>
         </div>
     </div>
+
     <hr>
 
     <ul class="nav nav-tabs" id="suggest-product" role="tablist">
         <li class="nav-item">
-            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#hot-seller-tab" role="tab" aria-controls="home" aria-selected="true">Hot seller</a>
+            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#hot-seller-tab" role="tab" aria-controls="home" aria-selected="true">Related Products</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" id="profile-tab" data-toggle="tab" href="#you-may-like-tab" role="tab" aria-controls="profile" aria-selected="false">You may also like</a>
@@ -85,8 +85,8 @@
     </ul>
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="hot-seller-tab" role="tabpanel" aria-labelledby="home-tab">
-            <div class="row display-flex">
-                <div class="col-sm-6 col-md-3">
+            <div id="relatedProduct" class="row display-flex">
+                <!-- <div class="col-sm-6 col-md-3">
                     <div class="">
                         <a href="#"><img src="img/like1.jpg" alt="like1" width="100%"></a>
                         <div class="row text-center">
@@ -112,12 +112,12 @@
                             <div class="col-xs-5 col-md-5 text-danger">$1</div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="tab-pane fade" id="you-may-like-tab" role="tabpanel" aria-labelledby="profile-tab">
-            <div class="row display-flex">
-                <div class="col-sm-6 col-md-3">
+            <div id="youLike" class="row display-flex">
+                <!-- <div class="col-sm-6 col-md-3">
                     <div class="">
                         <a href="#"><img src="img/like2.jpg" alt="like1" width="100%"></a>
                         <div class="row text-center">
@@ -143,13 +143,9 @@
                             <div class="col-xs-5 col-md-5 text-danger">$1</div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
 </main>
 <script type="text/javascript" src="js/jquery.elevatezoom.js"></script>
-<script type="text/javascript">
-    $("#zoom_01").elevateZoom();
-    $("#zoom_02").elevateZoom();
-</script>
