--- a/pages/home.html
+++ b/pages/home.html
@@ -34,7 +34,7 @@
     </div>
     <div class="label-of-row">
         Hallmark cards
-        <a href="?brandId=5a3b717a286d242000b05096#products" target="_blank">View all <i class="fa fa-chevron-right"></i></a>
+        <a href="#products?brandId=5a3b717a286d242000b05096" target="_blank">View all <i class="fa fa-chevron-right"></i></a>
     </div>
     <section class="row margin-block" id="hallmark-cards">
         <!-- <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
@@ -97,7 +97,7 @@
 
     <div class="label-of-row">
         Birthday Cards
-        <a href="?categoryId=5a3bc84c60738a2000ebca1d#products" target="_blank">View all <i class="fa fa-chevron-right"></i></a>
+        <a href="#products?categoryId=5a3bc84c60738a2000ebca1d" target="_blank">View all <i class="fa fa-chevron-right"></i></a>
     </div>
     <section class="row margin-block" id="birthday-cards">
         <!-- <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
