up date shopping cart

--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -51,7 +51,7 @@
                 <div class="text-danger margin-block-5">
                     DESCRIPTION
                 </div>
-                <div target="#" style="padding-bottom: 10px;">
+                <div id="productDescription" style="padding-bottom: 10px; white-space: pre-line;">
                    
                 </div>
             </div>
