update fixed content

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </ul>
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="cursor: pointer;">Search</button>
                 </form>
             </div>
         <!--</div>-->
@@ -132,6 +132,7 @@
                             <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
                         </div>
                     </div>
+                    <div class="form-group text-center">Haven't had an account? <a href="#register/" target="_blank">Register</a></div>
                 </form>
             </div>
         </div>
@@ -168,7 +169,7 @@
                         <li>
                             <div class="input-append newsletter-box text-center">
                                 <input type="text" class="full text-center" placeholder="Your Email ">
-                                <button class="btn btn-primary" type="button"> Subcribe <i class="fa fa-long-arrow-right"> </i> </button>
+                                <button class="btn btn-primary" type="button" style="cursor: pointer;"> Subcribe <i class="fa fa-long-arrow-right"> </i> </button>
                             </div>
                         </li>
                     </ul>
