--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -3,8 +3,7 @@
     <nav aria-label="breadcrumb" role="navigation">
         <ol class="breadcrumb">
             <li class="breadcrumb-item" aria-current="page"><a href="#">Home</a></li>
-            <li class="breadcrumb-item" aria-current="page"><a href="products.html">Happy Birthday</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Birthdayd61</li>
+            <li class="breadcrumb-item active" aria-current="page">Product Detail</li>
         </ol>
     </nav>
     <div class="row" id="product-detail">
