--- a/pages/register.html
+++ b/pages/register.html
@@ -97,6 +97,25 @@
             The Platforms may contain content served by third parties, and we work with third party service providers to conduct analytics and serve AG advertisements elsewhere online. These third parties may collect certain information about your use of the Platforms or other websites or apps. These third parties may set and access their own tracking devices (including cookies, web beacons, and embedded scripts) and may otherwise collect or have access to information about you and your online activities.
         </div>
     </div>
+
+<section class="modal fade" id="register-done" tabindex="-1" role="dialog" aria-hidden="true"><br><br><br>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content" style="border: 10px solid #90EE90">
+                <div class="text-center">
+                <h4 class="modal-title">Register succcessfully!</h4>
+                </div>
+            <div class="modal-body">
+                <form> 
+                    <div class="text-center">
+                            <a class="btn btn-primary" href="#" style="cursor:pointer;">Home</a>
+                            <button class="btn btn-info" data-toggle="modal" data-target="#login-modal" data-dismiss="modal" style="cursor:pointer;">Login</button>
+                    </div>   
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
 </main>
 <link rel="stylesheet" href="css/gijgo.min.css">
 <script src="js/gijgo.min.js"></script>
