--- a/pages/products.html
+++ b/pages/products.html
@@ -65,7 +65,7 @@
     <nav aria-label="breadcrumb" role="navigation">
         <ol class="breadcrumb">
             <li class="breadcrumb-item" aria-current="page"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Happy Birthday</li>
+            <li class="breadcrumb-item active" aria-current="page">Product List</li>
         </ol>
     </nav>
     <div class="row">
