config api url and fix shopping cart checker

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-8">
                 <div class="float-right" id="login-logout"> <!-- Khối chức năng, bên phải header -->
-                    <a class="text-white hover-pointer" href="#orderStatus">Order Status</a> <!-- 0 -->
+                    <a class="text-white hover-pointer" href="#orderStatus/">Order Status</a> <!-- 0 -->
                     |
                     <a class="text-white hover-pointer hover-underline">Login</a> <!-- 1 -->
                     /
@@ -60,7 +60,7 @@
                             <a class="dropdown-item" href="#products/?brandId=5a3b73c8286d242000b0509a">Moo</a>
                             <a class="dropdown-item" href="#products/?brandId=5a3b7474286d242000b0509b">Cardstore</a>
                             <a class="dropdown-item" href="#products/?brandId=5a3bac5c45982320000f99f6">Garlanna</a>
-                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-divider" id="brand-navigation"></div>
                             <a class="dropdown-item" href="#products/">View All</a>
                         </div>
 
@@ -76,7 +76,7 @@
                             <a class="dropdown-item" href="#products/?categoryId=5a3bc90760738a2000ebca20">Engagement Cards</a>
                             <a class="dropdown-item" href="#products/?categoryId=5a3bc92d60738a2000ebca21">Wedding Cards</a>
                             <a class="dropdown-item" href="#products/?categoryId=5a3bc94f60738a2000ebca22">Anniversary Cards</a>
-                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-divider" id="category-navigation"></div>
                             <a class="dropdown-item" href="#products/">View All</a>
                         </div>
                     </li>
@@ -148,9 +148,10 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6">
                     <h3> About Us </h3>
-                    <p>Red Cards Limited is a big company selling cards for various occasions. We have a huge
-                       collection of cards with one of a kind way of designing. We have met for thousands of customer's expectation.
-                       Our greatest goal is to bring customer's happiest and satisfaction.<br>
+                    <p style="white-space: pre-line">Red Cards Limited is a big company selling cards for various occasions. We have a huge collection of cards with one of a kind way of designing. We have met for thousands of customer's expectation.
+
+                       Our greatest goal is to bring customer's happiest and satisfaction.
+
                        Make your life a better life with cards of join and blissful! We sure help you!</p>
                 </div>
                 <div class="col-lg-3 col-md-3">
