--- a/pages/products.html
+++ b/pages/products.html
@@ -16,7 +16,7 @@
                         <div class="card">
                             <!--<div class="card-body">-->
                             <a href="#">
-                                <img src="img/retirement1.jpg" alt="merychrismas" class="w-100">
+                                <img src="" alt="merychrismas" class="w-100">
                             </a>
                             <!--</div>-->
                         </div>
@@ -27,7 +27,7 @@
                             <span id="brand"><a href="#"></a></span>
                             <span class="ml-5" id="code"></span>
                             <br><br>
-                            <p><strong class="text-danger"></strong></p>
+                            <p><b>Price: </b><strong class="text-danger"></strong></p>
                         </div>
                         <div style="border-bottom: 1px solid #c7c7c7">
                             
@@ -69,7 +69,7 @@
         </ol>
     </nav>
     <div class="row">
-        <form class="form-inline ml-3">
+        <form class="form-inline ml-4">
             <div class="form-row">
                 <div class="form-group">
                     <select class="form-control" id="selectBrand">
