--- a/pages/shoppingCart.html
+++ b/pages/shoppingCart.html
@@ -369,14 +369,16 @@
 <!--Not yet login-->
 <section class="modal fade" id="confirm-login" tabindex="-1" role="dialog" aria-hidden="true"><br><br><br>
     <div class="modal-dialog" role="document">
-        <div class="modal-content" style="border: 10px solid   #DAA520">
+        <div class="modal-content">
                 <div class="text-center">
-                <h4 class="modal-title">You must login to place order!</h4>
+                <h4 class="modal-title text-warning">You must login to place order!</h4>
                 </div>
             <div class="modal-body">
                 <form> 
                     <div class="text-center">
-                            <button class="btn btn-info" data-toggle="modal" data-target="#login-modal" data-dismiss="modal" style="cursor:pointer;">Login</button>
+                            <button class="btn btn-outline-warning hover-pointer" data-toggle="modal" data-target="#login-modal" data-dismiss="modal">
+                                Login <i class="fa fa-sign-in"></i>
+                            </button>
                     </div>   
                 </form>
             </div>
