--- a/pages/home.html
+++ b/pages/home.html
@@ -8,13 +8,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="img/show1.jpg" alt="First slide">
+                <img class="d-block w-100 h-auto" src="https://www.archiesonline.com/uploads/static_file_image/41d79d984b2ee58384335b0cbb5b33df.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item" style="height: 235px">
+                <img class="img-fluid" src="https://www.archiesonline.com/uploads/banner_image/7b70cbfe6720fd7b9cbdf2787d658fc3.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="img/show1.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/show1.jpg" alt="Third slide">
+                <img class="d-block w-100" style="height: 235px" src="https://www.archiesonline.com/uploads/banner_image/faeffd2db74a87cbd7022688955a402d.jpg" alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
